--- a/index.html
+++ b/index.html
@@ -22,21 +22,47 @@
 
 <body>
   <header>
-    <a href="#" class="logo">DnD Wiki</a>
-    <ul>
+    <a href="#" class="logo">Dungeons & Dragons</a>
+    <ul class="navlist">
       <li><a href="#">Inicio</a></li>
       <li><a href="#">Creación</a></li>
       <li><a href="#">About</a></li>
+      <li><a href="#">Ayuda</a></li>
       <li><a href="#">Contacto</a></li>
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Inicio</a></li>
-      <li><a href="#">Inicio</a></li>
+
     </ul>
+
+    <div class="bx bx-menu" id="menu-icon"> </div>
   </header>
+  <section class="hero">
+    <div class="hero-text">
+      <h5>#9 Raza</h5>
+      <h4>Personaje</h4>
+      <h1>BRUJO</h1>
+      <p>Los brujos son buscadores del conocimiento que se encuentra oculto en el tejido del multiverso.<br> A través de
+        pactos hechos con seres misteriosos de poder sobrenatural, los brujos desbloquean efectos mágicos tanto sutiles
+        como espectaculares.</p>
 
+      <a href="#">Comparar</a>
+      <a href="#" class="ctaa"><i class="ri-play-fill">Crear Personaje</i></a>
+    </div>
 
+    <div class="hero-img">
+        <img src="img/warlock.png">
+    </div>
+  </section>
 
- <!-- custom js -->
+  <div class="icons">
+    <a href="#"><i class="ri-bookmark-line"></i></a>
+    <a href="#"><i class="ri-line-chart-fill"></i></a>
+    <a href="#"><i class="ri-github-fill"></i></a>
+  </div>
+
+  <div  class="scroll-down">
+    <a href="#"><i class="ri-arrow-down-double-line"></i></a>
+  </div>
+
+  <!-- custom js -->
   <script src="js/script.js"></script>
 </body>
 
