--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
   <div  class="scroll-down">
     <a href="#"><i class="ri-arrow-down-double-line"></i></a>
   </div>
+  <!-- scroll efect -->
+  <script src="https://unpkg.com/scrollreveal"></script>
+
 
   <!-- custom js -->
   <script src="js/script.js"></script>
