--- a/index.html
+++ b/index.html
@@ -35,21 +35,122 @@
     <div class="bx bx-menu" id="menu-icon"> </div>
   </header>
   <section class="hero">
-    <div class="hero-text">
-      <h5>#9 Raza</h5>
-      <h4>Personaje</h4>
-      <h1>BRUJO</h1>
-      <p>Los brujos son buscadores del conocimiento que se encuentra oculto en el tejido del multiverso.<br> A través de
-        pactos hechos con seres misteriosos de poder sobrenatural, los brujos desbloquean efectos mágicos tanto sutiles
-        como espectaculares.</p>
+    <div id="introduction">
+      <h5>D&D 5th Edition</h5>
+      <p>Autor: @jramma (GitHub)</p>
+      <h1>Bienvenido a D&D wiki opensource</h1>
 
-      <a href="#">Comparar</a>
-      <a href="#" class="ctaa"><i class="ri-play-fill">Crear Personaje</i></a>
+      <div class="texto">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ornare id lectus eget congue. Fusce eu
+          posuere tortor, eget mattis mi. Proin ac ullamcorper erat, non convallis nisi. Donec imperdiet tincidunt urna
+          at dictum. Fusce vel nisi at quam vehicula consequat. Fusce aliquet purus id nibh lacinia, feugiat rhoncus
+          orci accumsan. Suspendisse quis laoreet ante. Proin non orci sed massa laoreet rutrum in at ligula.</p>
+      </div>
     </div>
 
-    <div class="hero-img">
-        <img src="img/warlock.png">
+
+    <div id="slide1" class="slide">
+      <div class="libreria">
+
+        <div class="row">
+          <div class="col">
+            <span><i class="ri-git-repository-fill"></i></span>
+            <h3><a href="#">Hechizos</a></h3>
+          </div>
+          <div class="col">
+            <span><i class="ri-team-fill"></i></span>
+            <h3><a href="#">Razas</a></h3>
+          </div>
+          <div class="col">
+            <span><i class="ri-bank-line"></i></span>
+            <h3><a href="#">História</a></h3>
+          </div>
+          <div class="col">
+            <span><i class="ri-key-2-line"></i></span>
+            <h3><a href="#">Crónica</a></h3>
+          </div>
+          <div class="col">
+            <span><i class="ri-sparkling-2-line"></i></span>
+            <h3><a href="#">Clases</a></h3>
+          </div>
+          <div class="col">
+            <span><i class="ri-flask-fill"></i></span>
+            <h3><a href="#">Elementos</a></h3>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <span><i class="ri-lock-unlock-fill"></i></span>
+            <h3><a href="#">Hazañas</a></h3>
+          </div>
+          <div class="col">
+            <span><i class="ri-trophy-line"></i></span>
+            <h3><a href="#">Hazañas raciales</a></h3>
+          </div>
+          <div class="col">
+            <span><i class="ri-bookmark-fill"></i></span>
+            <h3><a href="#">Misceláneas</a></h3>
+          </div>
+          <div class="col">
+            <span><i class="ri-home-2-line"></i></span>
+            <h3><a href="#">Hombrew</a></h3>
+          </div>
+          <div class="col">
+            <span><i class="ri-box-1-fill"></i></span>
+            <h3><a href="#">UA</a></h3>
+          </div>
+
+        </div>
+
+      </div>
     </div>
+
+    <div id="slide2" class="slide">
+      <div class="title">
+        <h1>Slide2 </h1>
+        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu
+          nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari
+          interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+      </div>
+    </div>
+
+    <div id="slide3" class="slide">
+      <div class="title">
+        <h1>Slide 3</h1>
+        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu
+          nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari
+          interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+      </div>
+    </div>
+
+    <div id="slide4" class="slide">
+      <div class="title">
+        <h1>Slide 4</h1>
+        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu
+          nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari
+          interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+      </div>
+    </div>
+
+    <div id="slide5" class="slide">
+      <div class="title">
+        <h1>Slide 5</h1>
+        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu
+          nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari
+          interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+      </div>
+    </div>
+
+    <div id="slide6" class="slide">
+      <div class="title">
+        <h1>Slide 6</h1>
+        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu
+          nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari
+          interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
+      </div>
+    </div>
+
   </section>
 
   <div class="icons">
@@ -58,7 +159,7 @@
     <a href="#"><i class="ri-github-fill"></i></a>
   </div>
 
-  <div  class="scroll-down">
+  <div class="scroll-down">
     <a href="#"><i class="ri-arrow-down-double-line"></i></a>
   </div>
   <!-- scroll efect -->
