--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-image-1" onload="randomBg()">
+
   <header>
     <a href="#" class="logo">Dungeons & Dragons</a>
     <ul class="navlist">
@@ -31,11 +32,42 @@
       <li><a href="#">Contacto</a></li>
 
     </ul>
-
     <div class="bx bx-menu" id="menu-icon"> </div>
   </header>
-  <section class="hero">
-    <div id="introduction">
+  <main>
+    <section class="no-parallax">
+      <br><br><br><br><br><br>
+      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
+    </section>
+    <section class="parallax bg">
+      <br><br><br><br><br><br>
+      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
+    </section>
+    <section class="no-parallax">
+      <br><br><br><br><br><br>
+      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
+    </section>
+    <section class="no-parallax">
+      <br><br><br><br><br><br>
+      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
+    </section>
+    <section class="parallax bg">
+      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
+    </section>
+    <section class="no-parallax">
+      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
+    </section>
+    <section class="no-parallax">
+      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
+    </section>
+    <section class="parallax bg">
+      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
+    </section>
+    <section class="no-parallax">
+      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
+    </section>
+  </main>
+    <!-- <div id="introduction">
       <h5>D&D 5th Edition</h5>
       <p>Autor: @jramma (GitHub)</p>
       <h1>Bienvenido a D&D wiki opensource</h1>
@@ -46,11 +78,10 @@
           at dictum. Fusce vel nisi at quam vehicula consequat. Fusce aliquet purus id nibh lacinia, feugiat rhoncus
           orci accumsan. Suspendisse quis laoreet ante. Proin non orci sed massa laoreet rutrum in at ligula.</p>
       </div>
-    </div>
+    </div> -->
+   
 
-
-    <div id="slide1" class="slide">
-      <div class="libreria">
+      <!-- <div class="libreria">
 
         <div class="row">
           <div class="col">
@@ -63,7 +94,7 @@
           </div>
           <div class="col">
             <span><i class="ri-bank-line"></i></span>
-            <h3><a href="#">História</a></h3>
+            <h3><a href="#">Historia</a></h3>
           </div>
           <div class="col">
             <span><i class="ri-key-2-line"></i></span>
@@ -103,65 +134,8 @@
 
         </div>
 
-      </div>
-    </div>
+      </div> -->
 
-    <div id="slide2" class="slide">
-      <div class="title">
-        <h1>Slide2 </h1>
-        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu
-          nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari
-          interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
-      </div>
-    </div>
-
-    <div id="slide3" class="slide">
-      <div class="title">
-        <h1>Slide 3</h1>
-        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu
-          nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari
-          interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
-      </div>
-    </div>
-
-    <div id="slide4" class="slide">
-      <div class="title">
-        <h1>Slide 4</h1>
-        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu
-          nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari
-          interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
-      </div>
-    </div>
-
-    <div id="slide5" class="slide">
-      <div class="title">
-        <h1>Slide 5</h1>
-        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu
-          nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari
-          interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
-      </div>
-    </div>
-
-    <div id="slide6" class="slide">
-      <div class="title">
-        <h1>Slide 6</h1>
-        <p>Lorem ipsum dolor sit amet, in velit iudico mandamus sit, persius dolorum in per, postulant mnesarchum cu
-          nam. Malis movet ornatus id vim, feugait detracto est ea, eam eruditi conceptam in. Ne sit explicari
-          interesset. Labores perpetua cum at. Id viris docendi denique vim.</p>
-      </div>
-    </div>
-
-  </section>
-
-  <div class="icons">
-    <a href="#"><i class="ri-bookmark-line"></i></a>
-    <a href="#"><i class="ri-line-chart-fill"></i></a>
-    <a href="#"><i class="ri-github-fill"></i></a>
-  </div>
-
-  <div class="scroll-down">
-    <a href="#"><i class="ri-arrow-down-double-line"></i></a>
-  </div>
   <!-- scroll efect -->
   <script src="https://unpkg.com/scrollreveal"></script>
 
