--- a/index.html
+++ b/index.html
@@ -37,52 +37,13 @@
   <main>
     <section class="no-parallax">
       <br><br><br><br><br><br>
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat
+        repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.
+      </p>
     </section>
     <section class="parallax bg">
       <br><br><br><br><br><br>
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
-    </section>
-    <section class="no-parallax">
-      <br><br><br><br><br><br>
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
-    </section>
-    <section class="no-parallax">
-      <br><br><br><br><br><br>
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
-    </section>
-    <section class="parallax bg">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
-    </section>
-    <section class="no-parallax">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
-    </section>
-    <section class="no-parallax">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
-    </section>
-    <section class="parallax bg">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
-    </section>
-    <section class="no-parallax">
-      <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.</h1>
-    </section>
-  </main>
-    <!-- <div id="introduction">
-      <h5>D&D 5th Edition</h5>
-      <p>Autor: @jramma (GitHub)</p>
-      <h1>Bienvenido a D&D wiki opensource</h1>
-
-      <div class="texto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ornare id lectus eget congue. Fusce eu
-          posuere tortor, eget mattis mi. Proin ac ullamcorper erat, non convallis nisi. Donec imperdiet tincidunt urna
-          at dictum. Fusce vel nisi at quam vehicula consequat. Fusce aliquet purus id nibh lacinia, feugiat rhoncus
-          orci accumsan. Suspendisse quis laoreet ante. Proin non orci sed massa laoreet rutrum in at ligula.</p>
-      </div>
-    </div> -->
-   
-
-      <!-- <div class="libreria">
-
+      <div class="libreria">
         <div class="row">
           <div class="col">
             <span><i class="ri-git-repository-fill"></i></span>
@@ -117,7 +78,9 @@
           </div>
           <div class="col">
             <span><i class="ri-trophy-line"></i></span>
+            <div>
             <h3><a href="#">Hazañas raciales</a></h3>
+            </div>
           </div>
           <div class="col">
             <span><i class="ri-bookmark-fill"></i></span>
@@ -131,10 +94,60 @@
             <span><i class="ri-box-1-fill"></i></span>
             <h3><a href="#">UA</a></h3>
           </div>
-
         </div>
+      </div>
+    </section>
+    <section class="no-parallax">
+      <br><br><br><br><br><br>
+      
 
-      </div> -->
+    </section>
+    <section class="no-parallax">
+      <br><br><br><br><br><br>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat
+        repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.
+      </p>
+    </section>
+    <section class="parallax bg">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat
+        repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.
+      </p>
+    </section>
+    <section class="no-parallax">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat
+        repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.
+      </p>
+    </section>
+    <section class="no-parallax">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat
+        repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.
+      </p>
+    </section>
+    <section class="parallax bg">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat
+        repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.
+      </p>
+    </section>
+    <section class="no-parallax">
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias accusamus eius libero dolorum in quaerat
+        repellendus praesentium vitae veniam, mollitia repellat voluptatum dolor at ipsa sit saepe quo reiciendis iusto.
+      </p>
+    </section>
+  </main>
+  <!-- <div id="introduction">
+      <h5>D&D 5th Edition</h5>
+      <p>Autor: @jramma (GitHub)</p>
+      <h1>Bienvenido a D&D wiki opensource</h1>
+
+      <div class="texto">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ornare id lectus eget congue. Fusce eu
+          posuere tortor, eget mattis mi. Proin ac ullamcorper erat, non convallis nisi. Donec imperdiet tincidunt urna
+          at dictum. Fusce vel nisi at quam vehicula consequat. Fusce aliquet purus id nibh lacinia, feugiat rhoncus
+          orci accumsan. Suspendisse quis laoreet ante. Proin non orci sed massa laoreet rutrum in at ligula.</p>
+      </div>
+    </div> -->
+
+
 
   <!-- scroll efect -->
   <script src="https://unpkg.com/scrollreveal"></script>
