--- a/brujo.html
+++ b/brujo.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>D&D</title>
   <!-- custom css link -->
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="personajes/brujo/css/style.css">
   <link rel="icon" type="image/s" href="img/icon.png">
   <!--boxicon-->
   <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -63,10 +63,8 @@
   </div>
   <!-- scroll efect -->
   <script src="https://unpkg.com/scrollreveal"></script>
-
-
   <!-- custom js -->
-  <script src="js/script.js"></script>
+  <script src="personajes/brujo/js/script.js"></script>
 </body>
 
 </html>
